--- a/public/assets/css/shop-homepage.css
+++ b/public/assets/css/shop-homepage.css
@@ -1,3 +1,4 @@
+
 #mainContainer {
   min-height:100vh
 }
@@ -44,6 +45,51 @@
   display: block;
   padding: 1em;
 
+}
+
+#shoppingCardLabel{
+  font-size: 1.4em;
+}
+
+.slideContainer{
+  width: 100%;
+}
+
+
+/* The slider itself */
+.slider {
+  -webkit-appearance: none;  /* Override default CSS styles */
+  width: 100%; /* Full-width */
+  height: 5px; /* Specified height */
+  border-radius: 15px;
+  background: #d3d3d3; /* Grey background */
+  outline: none; /* Remove outline */
+  opacity: 0.6; /* Set transparency (for mouse-over effects on hover) */
+  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+  transition: opacity .2s;
+}
+
+/* Mouse-over effects */
+.slider:hover {
+  opacity: 1; /* Fully shown on mouse-over */
+}
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  width: 15px; /* Set a specific slider handle width */
+  height: 15px; /* Slider handle height */
+  border-radius: 50%;
+  background: #4CAF50; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+}
+
+.slider::-moz-range-thumb {
+  width: 25px; /* Set a specific slider handle width */
+  height: 25px; /* Slider handle height */
+  border-radius: 50%;
+  background: #4CAF50; /* Green background */
+  cursor: pointer; /* Cursor on hover */
 }
 
 /*
@@ -408,3 +454,76 @@ footer .copyright {
   font-size: 16px;
   padding: 25px 35px;
 }
+
+/*
+   -----------------------------------------------------------------------------------------------------------
+  | The following CSS rules apply all to the Besteller Carousel. Thats why #myCarousel is always preceded     |
+  |  before the other selectors.                                                                              |
+   -----------------------------------------------------------------------------------------------------------
+*/
+
+/* show 3 items */
+  #myCarousel .carousel-inner .active,
+  #myCarousel .carousel-inner .active + .carousel-item,
+  #myCarousel .carousel-inner .active + .carousel-item + .carousel-item {
+    display: block;
+  }
+
+#myCarousel .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left),
+#myCarousel .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item,
+#myCarousel .carousel-inner .carousel-item.active:not(.carousel-item-right):not(.carousel-item-left) + .carousel-item + .carousel-item {
+    transition: none;
+  }
+
+#myCarousel .carousel-inner .carousel-item-next,
+#myCarousel  .carousel-inner .carousel-item-prev {
+    position: relative;
+    transform: translate3d(0, 0, 0);
+  }
+
+#myCarousel .carousel-inner .active.carousel-item + .carousel-item + .carousel-item + .carousel-item {
+    position: absolute;
+    top: 0;
+    right: -33.3333%;
+    z-index: -1;
+    display: block;
+    visibility: visible;
+  }
+
+  /* left or forward direction */
+#myCarousel .active.carousel-item-left + .carousel-item-next.carousel-item-left,
+#myCarousel .carousel-item-next.carousel-item-left + .carousel-item,
+#myCarousel .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item,
+#myCarousel .carousel-item-next.carousel-item-left + .carousel-item + .carousel-item + .carousel-item {
+    position: relative;
+    transform: translate3d(-100%, 0, 0);
+    visibility: visible;
+  }
+
+  /* farthest right hidden item must be abso position for animations */
+#myCarousel .carousel-inner .carousel-item-prev.carousel-item-right {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    display: block;
+    visibility: visible;
+  }
+
+  /* right or prev direction */
+#myCarousel .active.carousel-item-right + .carousel-item-prev.carousel-item-right,
+#myCarousel .carousel-item-prev.carousel-item-right + .carousel-item,
+#myCarousel .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item,
+#myCarousel .carousel-item-prev.carousel-item-right + .carousel-item + .carousel-item + .carousel-item {
+    position: relative;
+    transform: translate3d(100%, 0, 0);
+    visibility: visible;
+    display: block;
+    visibility: visible;
+  }
+
+/*
+  ------------------------------------------------------------------------------------------------------------
+  |                           END OF BESTELLER CAROUSEL RULES                                                 |
+   ------------------------------------------------------------------------------------------------------------
+*/
