added first approach of Einkaufsguide and realignt the welcome site

--- a/public/assets/css/shop-homepage.css
+++ b/public/assets/css/shop-homepage.css
@@ -34,12 +34,12 @@
   align-items: stretch;
 }
 
-#sidebar {
+/*#sidebar {
   min-width: 300px;
   max-width: 300px;
   min-height: 100vh;
 
-}
+}*/
 
 #sidebar ul li a {
   display: block;
